# Openenv-Scaler

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  llm_smoke_test.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py
.codex/skills/: openenv-cli
server/: app.py  environment.py  grader.py
static/: index.html
tasks/: task_easy.json  task_expert.json  task_extreme.json  task_hard.json  task_medium.json  task_noisy_alert.json  task_pool_exhaustion.json  task_token_expiry.json  task_trap.json
