[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-responsegym"
version = "1.0.0"
description = "AI Incident Response Benchmark Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "SRE-ResponseGym"
version = "1.0.0"
entry_point = "server.app:app"
port = 7860